@@ -12,6 +12,7 @@
 	- the merging of an old saved ext maps with a new one, makes problems
 	- ac_queue_add (ac=0x80b3780, pubkey=0x80b4370
 			"0\201\211\002\201\201") at andna_cache.c:238
+	- continue in load_option
 
 - SNSD
 	- pubkey: automatic deletion request
