@@ -252,6 +252,24 @@ connection.
 
 =back
 
+=item
+F</etc/netsukuku/tc_shaper.sh>
+
+This script manages the traffic shaping for the upload bandwidth.
+It is executed by NetsukukuD at its start if its relative option has been
+enabled.
+
+=back
+
+=item
+F</var/run/ntkd.pid>
+
+It is the lock file created by ntkd at its start, it is used to check if other
+instances of ntkd are already running.
+Only one instance is allowed.
+
+=back
+
 =head1 KERNEL DEPENDENCIES
 
 On Linux be sure to have the following options set in your kernel .config.
